--- a/src/css/output.css
+++ b/src/css/output.css
@@ -6,19 +6,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-purple-500: oklch(0.627 0.265 303.9);
-    --color-pink-500: oklch(0.656 0.241 354.308);
+    --color-amber-400: oklch(0.828 0.189 84.429);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
-    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-font-feature-settings: var(--font-sans--font-feature-settings);
     --default-font-variation-settings: var(
@@ -214,23 +209,8 @@
   .z-10 {
     z-index: 10;
   }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
   }
   .mx-\[8px\] {
     margin-inline: 8px;
@@ -244,26 +224,32 @@
   .my-\[8px\] {
     margin-block: 8px;
   }
-  .mt-\[1\] {
-    margin-top: 1;
+  .my-\[52px\] {
+    margin-block: 52px;
   }
-  .mt-\[22\] {
-    margin-top: 22;
+  .mt-\[10px\] {
+    margin-top: 10px;
+  }
+  .mt-\[15px\] {
+    margin-top: 15px;
+  }
+  .mt-\[20px\] {
+    margin-top: 20px;
   }
   .mt-\[22px\] {
     margin-top: 22px;
   }
-  .mt-\[28\] {
-    margin-top: 28;
+  .mt-\[24px\] {
+    margin-top: 24px;
   }
   .mt-\[28px\] {
     margin-top: 28px;
   }
+  .mt-\[32px\] {
+    margin-top: 32px;
+  }
   .mt-\[42px\] {
     margin-top: 42px;
-  }
-  .mt-\[49\] {
-    margin-top: 49;
   }
   .mt-\[49px\] {
     margin-top: 49px;
@@ -271,8 +257,8 @@
   .mt-\[50px\] {
     margin-top: 50px;
   }
-  .mt-\[52px\] {
-    margin-top: 52px;
+  .mt-\[51px\] {
+    margin-top: 51px;
   }
   .mt-\[66px\] {
     margin-top: 66px;
@@ -292,11 +278,20 @@
   .mb-1\.5 {
     margin-bottom: calc(var(--spacing) * 1.5);
   }
+  .mb-\[1\] {
+    margin-bottom: 1;
+  }
   .mb-\[14px\] {
     margin-bottom: 14px;
   }
   .mb-\[18px\] {
     margin-bottom: 18px;
+  }
+  .mb-\[20px\] {
+    margin-bottom: 20px;
+  }
+  .mb-\[24px\] {
+    margin-bottom: 24px;
   }
   .mb-\[25px\] {
     margin-bottom: 25px;
@@ -304,14 +299,23 @@
   .mb-\[28px\] {
     margin-bottom: 28px;
   }
+  .mb-\[52px\] {
+    margin-bottom: 52px;
+  }
   .mb-\[65px\] {
     margin-bottom: 65px;
+  }
+  .ml-\[20px\] {
+    margin-left: 20px;
   }
   .block {
     display: block;
   }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .hidden {
     display: none;
@@ -325,11 +329,8 @@
   .table {
     display: table;
   }
-  .h-14 {
-    height: calc(var(--spacing) * 14);
-  }
-  .h-\[5\] {
-    height: 5;
+  .h-\[00px\] {
+    height: 00px;
   }
   .h-\[19px\] {
     height: 19px;
@@ -343,47 +344,44 @@
   .h-\[70px\] {
     height: 70px;
   }
+  .h-\[80px\] {
+    height: 80px;
+  }
+  .h-\[377px\] {
+    height: 377px;
+  }
   .h-\[413px\] {
     height: 413px;
   }
   .h-\[420px\] {
     height: 420px;
   }
-  .h-\[513px\] {
-    height: 513px;
-  }
-  .h-\[613px\] {
-    height: 613px;
+  .h-\[600px\] {
+    height: 600px;
   }
   .h-\[700px\] {
     height: 700px;
   }
-  .h-\[780px\] {
-    height: 780px;
-  }
-  .h-\[790px\] {
-    height: 790px;
-  }
   .h-\[800px\] {
     height: 800px;
+  }
+  .h-\[820px\] {
+    height: 820px;
+  }
+  .h-\[830px\] {
+    height: 830px;
   }
   .h-\[840px\] {
     height: 840px;
   }
-  .h-\[860px\] {
-    height: 860px;
+  .h-fit {
+    height: fit-content;
   }
   .h-full {
     height: 100%;
   }
-  .h-screen {
-    height: 100vh;
-  }
-  .w-\[0px\] {
-    width: 0px;
-  }
-  .w-\[2\] {
-    width: 2;
+  .w-\[10px\] {
+    width: 10px;
   }
   .w-\[19px\] {
     width: 19px;
@@ -415,6 +413,9 @@
   .w-\[88px\] {
     width: 88px;
   }
+  .w-\[100px\] {
+    width: 100px;
+  }
   .w-\[105px\] {
     width: 105px;
   }
@@ -427,29 +428,38 @@
   .w-\[170px\] {
     width: 170px;
   }
+  .w-\[200px\] {
+    width: 200px;
+  }
   .w-\[210px\] {
     width: 210px;
   }
   .w-\[230px\] {
     width: 230px;
   }
-  .w-\[285px\] {
-    width: 285px;
-  }
-  .w-\[300px\] {
-    width: 300px;
+  .w-\[320px\] {
+    width: 320px;
   }
   .w-\[350px\] {
     width: 350px;
   }
-  .w-\[385px\] {
-    width: 385px;
+  .w-\[399px\] {
+    width: 399px;
   }
   .w-\[400px\] {
     width: 400px;
   }
-  .w-\[485px\] {
-    width: 485px;
+  .w-\[460px\] {
+    width: 460px;
+  }
+  .w-\[480px\] {
+    width: 480px;
+  }
+  .w-\[500px\] {
+    width: 500px;
+  }
+  .w-\[516px\] {
+    width: 516px;
   }
   .w-\[530px\] {
     width: 530px;
@@ -457,23 +467,11 @@
   .w-\[760px\] {
     width: 760px;
   }
-  .w-\[780px\] {
-    width: 780px;
-  }
-  .w-\[800px\] {
-    width: 800px;
+  .w-\[763px\] {
+    width: 763px;
   }
   .w-\[828px\] {
     width: 828px;
-  }
-  .w-\[1067\] {
-    width: 1067;
-  }
-  .w-\[1067px\] {
-    width: 1067px;
-  }
-  .w-\[px\] {
-    width: px;
   }
   .w-fit {
     width: fit-content;
@@ -481,14 +479,23 @@
   .w-full {
     width: 100%;
   }
+  .w-max {
+    width: max-content;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
-  .transform {
-    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
-  }
   .resize {
     resize: both;
+  }
+  .resize-none {
+    resize: none;
+  }
+  .appearance-none {
+    appearance: none;
+  }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -508,8 +515,11 @@
   .justify-end {
     justify-content: flex-end;
   }
-  .justify-evenly {
-    justify-content: space-evenly;
+  .gap-11 {
+    gap: calc(var(--spacing) * 11);
+  }
+  .gap-\[0px\] {
+    gap: 0px;
   }
   .gap-\[2px\] {
     gap: 2px;
@@ -523,9 +533,6 @@
   .gap-\[10px\] {
     gap: 10px;
   }
-  .gap-\[11px\] {
-    gap: 11px;
-  }
   .gap-\[14px\] {
     gap: 14px;
   }
@@ -535,20 +542,29 @@
   .gap-\[16px\] {
     gap: 16px;
   }
+  .gap-\[17px\] {
+    gap: 17px;
+  }
+  .gap-\[18px\] {
+    gap: 18px;
+  }
   .gap-\[20px\] {
     gap: 20px;
   }
   .gap-\[24px\] {
     gap: 24px;
   }
+  .gap-\[30px\] {
+    gap: 30px;
+  }
+  .gap-\[40px\] {
+    gap: 40px;
+  }
+  .gap-\[45px\] {
+    gap: 45px;
+  }
   .gap-\[50px\] {
     gap: 50px;
-  }
-  .gap-\[60px\] {
-    gap: 60px;
-  }
-  .gap-\[70px\] {
-    gap: 70px;
   }
   .gap-\[100px\] {
     gap: 100px;
@@ -558,6 +574,9 @@
   }
   .gap-\[160px\] {
     gap: 160px;
+  }
+  .gap-\[px\] {
+    gap: px;
   }
   .overflow-hidden {
     overflow: hidden;
@@ -572,18 +591,35 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
   .border-b-3 {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 3px;
   }
-  .bg-black {
-    background-color: var(--color-black);
+  .border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
+  }
+  .border-l-0 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 0px;
+  }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
   }
   .bg-primary {
     background-color: var(--color-primary);
-  }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -597,54 +633,16 @@
   .bg-white-transparan {
     background-color: var(--color-white-transparan);
   }
-  .bg-linear-0 {
-    --tw-gradient-position: 0deg in oklab;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-10 {
-    --tw-gradient-position: 10deg in oklab;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-65 {
-    --tw-gradient-position: 65deg in oklab;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-90 {
-    --tw-gradient-position: 90deg in oklab;
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
   .bg-linear-180 {
     --tw-gradient-position: 180deg in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-\[url\(\.\/assets\/img\/img_construction\.jpg\)\] {
-    background-image: url(./assets/img/img_construction.jpg);
-  }
-  .bg-\[url\(\/assets\/img\/img_construction\.jpg\)\] {
-    background-image: url(/assets/img/img_construction.jpg);
-  }
-  .from-black {
-    --tw-gradient-from: var(--color-black);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-primary {
     --tw-gradient-from: var(--color-primary);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .from-purple-500 {
-    --tw-gradient-from: var(--color-purple-500);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-pink-500 {
-    --tw-gradient-to: var(--color-pink-500);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-white {
-    --tw-gradient-to: var(--color-white);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .bg-cover {
-    background-size: cover;
+  .px-\[20px\] {
+    padding-inline: 20px;
   }
   .px-\[25px\] {
     padding-inline: 25px;
@@ -655,8 +653,23 @@
   .px-\[50px\] {
     padding-inline: 50px;
   }
+  .px-\[53px\] {
+    padding-inline: 53px;
+  }
+  .px-\[64px\] {
+    padding-inline: 64px;
+  }
+  .px-\[80px\] {
+    padding-inline: 80px;
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
   .py-\[10px\] {
     padding-block: 10px;
+  }
+  .py-\[15px\] {
+    padding-block: 15px;
   }
   .py-\[25px\] {
     padding-block: 25px;
@@ -664,17 +677,44 @@
   .py-\[38px\] {
     padding-block: 38px;
   }
+  .py-\[42px\] {
+    padding-block: 42px;
+  }
+  .py-\[43px\] {
+    padding-block: 43px;
+  }
+  .py-\[52px\] {
+    padding-block: 52px;
+  }
   .py-\[53px\] {
     padding-block: 53px;
   }
+  .pt-\[2\] {
+    padding-top: 2;
+  }
   .pt-\[12px\] {
     padding-top: 12px;
+  }
+  .pt-\[15px\] {
+    padding-top: 15px;
+  }
+  .pt-\[20px\] {
+    padding-top: 20px;
   }
   .pt-\[40px\] {
     padding-top: 40px;
   }
   .pt-\[52px\] {
     padding-top: 52px;
+  }
+  .pb-\[52px\] {
+    padding-bottom: 52px;
+  }
+  .pb-\[60px\] {
+    padding-bottom: 60px;
+  }
+  .pl-\[19px\] {
+    padding-left: 19px;
   }
   .text-center {
     text-align: center;
@@ -685,6 +725,9 @@
   .text-justify {
     text-align: justify;
   }
+  .text-start {
+    text-align: start;
+  }
   .font-comforter {
     font-family: var(--font-comforter);
   }
@@ -693,6 +736,9 @@
   }
   .font-unlock {
     font-family: var(--font-unlock);
+  }
+  .text-\[1px\] {
+    font-size: 1px;
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -703,6 +749,9 @@
   .text-\[16px\] {
     font-size: 16px;
   }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
   .text-\[20px\] {
     font-size: 20px;
   }
@@ -711,6 +760,12 @@
   }
   .text-\[25px\] {
     font-size: 25px;
+  }
+  .text-\[30px\] {
+    font-size: 30px;
+  }
+  .text-\[33px\] {
+    font-size: 33px;
   }
   .text-\[48px\] {
     font-size: 48px;
@@ -736,8 +791,8 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-\[64\] {
-    color: 64;
+  .text-\[1\] {
+    color: 1;
   }
   .text-black {
     color: var(--color-black);
@@ -751,52 +806,12 @@
   .underline {
     text-decoration-line: underline;
   }
-  .opacity-5 {
-    opacity: 5%;
-  }
-  .opacity-20 {
-    opacity: 20%;
-  }
-  .opacity-60 {
-    opacity: 60%;
-  }
-  .opacity-75 {
-    opacity: 75%;
-  }
-  .opacity-80 {
-    opacity: 80%;
-  }
-  .opacity-90 {
-    opacity: 90%;
-  }
-  .opacity-95 {
-    opacity: 95%;
-  }
-  .opacity-100 {
-    opacity: 100%;
-  }
   .opacity-200 {
     opacity: 200%;
   }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .filter {
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .ease-in-out {
-    --tw-ease: var(--ease-in-out);
-    transition-timing-function: var(--ease-in-out);
   }
   .hover\:border-b-2 {
     &:hover {
@@ -827,36 +842,33 @@
       }
     }
   }
+  .focus\:outline {
+    &:focus {
+      outline-style: var(--tw-outline-style);
+      outline-width: 1px;
+    }
+  }
+  .focus\:outline-none {
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+    }
+  }
   .lg\:w-\[1349px\] {
     @media (width >= 64rem) {
       width: 1349px;
     }
   }
-}
-@property --tw-rotate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateX(0);
-}
-@property --tw-rotate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateY(0);
-}
-@property --tw-rotate-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateZ(0);
-}
-@property --tw-skew-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewX(0);
-}
-@property --tw-skew-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewY(0);
+  .\[\&\:\:-webkit-inner-spin-button\]\:appearance-none {
+    &::-webkit-inner-spin-button {
+      appearance: none;
+    }
+  }
+  .\[\&\:\:-webkit-outer-spin-button\]\:appearance-none {
+    &::-webkit-outer-spin-button {
+      appearance: none;
+    }
+  }
 }
 @property --tw-border-style {
   syntax: "*";
@@ -913,84 +925,4 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-sepia {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-drop-shadow {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-sepia {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
 }
