--- a/src/css/output.css
+++ b/src/css/output.css
@@ -7,7 +7,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-amber-400: oklch(0.828 0.189 84.429);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -194,18 +193,6 @@
   .top-\[100px\] {
     top: 100px;
   }
-  .top-\[130px\] {
-    top: 130px;
-  }
-  .top-\[520px\] {
-    top: 520px;
-  }
-  .right-\[80px\] {
-    right: 80px;
-  }
-  .left-\[80px\] {
-    left: 80px;
-  }
   .z-10 {
     z-index: 10;
   }
@@ -223,12 +210,6 @@
   }
   .my-\[8px\] {
     margin-block: 8px;
-  }
-  .my-\[52px\] {
-    margin-block: 52px;
-  }
-  .mt-\[10px\] {
-    margin-top: 10px;
   }
   .mt-\[15px\] {
     margin-top: 15px;
@@ -278,9 +259,6 @@
   .mb-1\.5 {
     margin-bottom: calc(var(--spacing) * 1.5);
   }
-  .mb-\[1\] {
-    margin-bottom: 1;
-  }
   .mb-\[14px\] {
     margin-bottom: 14px;
   }
@@ -289,6 +267,12 @@
   }
   .mb-\[20px\] {
     margin-bottom: 20px;
+  }
+  .mb-\[22px\] {
+    margin-bottom: 22px;
+  }
+  .mb-\[23px\] {
+    margin-bottom: 23px;
   }
   .mb-\[24px\] {
     margin-bottom: 24px;
@@ -299,14 +283,8 @@
   .mb-\[28px\] {
     margin-bottom: 28px;
   }
-  .mb-\[52px\] {
-    margin-bottom: 52px;
-  }
   .mb-\[65px\] {
     margin-bottom: 65px;
-  }
-  .ml-\[20px\] {
-    margin-left: 20px;
   }
   .block {
     display: block;
@@ -329,9 +307,6 @@
   .table {
     display: table;
   }
-  .h-\[00px\] {
-    height: 00px;
-  }
   .h-\[19px\] {
     height: 19px;
   }
@@ -344,29 +319,11 @@
   .h-\[70px\] {
     height: 70px;
   }
-  .h-\[80px\] {
-    height: 80px;
-  }
   .h-\[377px\] {
     height: 377px;
   }
-  .h-\[413px\] {
-    height: 413px;
-  }
   .h-\[420px\] {
     height: 420px;
-  }
-  .h-\[600px\] {
-    height: 600px;
-  }
-  .h-\[700px\] {
-    height: 700px;
-  }
-  .h-\[800px\] {
-    height: 800px;
-  }
-  .h-\[820px\] {
-    height: 820px;
   }
   .h-\[830px\] {
     height: 830px;
@@ -379,9 +336,6 @@
   }
   .h-full {
     height: 100%;
-  }
-  .w-\[10px\] {
-    width: 10px;
   }
   .w-\[19px\] {
     width: 19px;
@@ -413,12 +367,6 @@
   .w-\[88px\] {
     width: 88px;
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
-  .w-\[105px\] {
-    width: 105px;
-  }
   .w-\[140px\] {
     width: 140px;
   }
@@ -437,12 +385,6 @@
   .w-\[230px\] {
     width: 230px;
   }
-  .w-\[320px\] {
-    width: 320px;
-  }
-  .w-\[350px\] {
-    width: 350px;
-  }
   .w-\[399px\] {
     width: 399px;
   }
@@ -451,18 +393,6 @@
   }
   .w-\[460px\] {
     width: 460px;
-  }
-  .w-\[480px\] {
-    width: 480px;
-  }
-  .w-\[500px\] {
-    width: 500px;
-  }
-  .w-\[516px\] {
-    width: 516px;
-  }
-  .w-\[530px\] {
-    width: 530px;
   }
   .w-\[760px\] {
     width: 760px;
@@ -479,9 +409,6 @@
   .w-full {
     width: 100%;
   }
-  .w-max {
-    width: max-content;
-  }
   .border-collapse {
     border-collapse: collapse;
   }
@@ -494,8 +421,14 @@
   .appearance-none {
     appearance: none;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -515,12 +448,6 @@
   .justify-end {
     justify-content: flex-end;
   }
-  .gap-11 {
-    gap: calc(var(--spacing) * 11);
-  }
-  .gap-\[0px\] {
-    gap: 0px;
-  }
   .gap-\[2px\] {
     gap: 2px;
   }
@@ -535,9 +462,6 @@
   }
   .gap-\[14px\] {
     gap: 14px;
-  }
-  .gap-\[15px\] {
-    gap: 15px;
   }
   .gap-\[16px\] {
     gap: 16px;
@@ -554,29 +478,11 @@
   .gap-\[24px\] {
     gap: 24px;
   }
-  .gap-\[30px\] {
-    gap: 30px;
-  }
   .gap-\[40px\] {
     gap: 40px;
   }
   .gap-\[45px\] {
     gap: 45px;
-  }
-  .gap-\[50px\] {
-    gap: 50px;
-  }
-  .gap-\[100px\] {
-    gap: 100px;
-  }
-  .gap-\[150px\] {
-    gap: 150px;
-  }
-  .gap-\[160px\] {
-    gap: 160px;
-  }
-  .gap-\[px\] {
-    gap: px;
   }
   .overflow-hidden {
     overflow: hidden;
@@ -591,14 +497,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
-  }
   .border-b-2 {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 2px;
@@ -606,17 +504,6 @@
   .border-b-3 {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 3px;
-  }
-  .border-l {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 1px;
-  }
-  .border-l-0 {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 0px;
-  }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
   }
   .bg-primary {
     background-color: var(--color-primary);
@@ -650,9 +537,6 @@
   .px-\[30px\] {
     padding-inline: 30px;
   }
-  .px-\[50px\] {
-    padding-inline: 50px;
-  }
   .px-\[53px\] {
     padding-inline: 53px;
   }
@@ -683,32 +567,14 @@
   .py-\[43px\] {
     padding-block: 43px;
   }
-  .py-\[52px\] {
-    padding-block: 52px;
-  }
-  .py-\[53px\] {
-    padding-block: 53px;
-  }
-  .pt-\[2\] {
-    padding-top: 2;
-  }
   .pt-\[12px\] {
     padding-top: 12px;
   }
   .pt-\[15px\] {
     padding-top: 15px;
   }
-  .pt-\[20px\] {
-    padding-top: 20px;
-  }
-  .pt-\[40px\] {
-    padding-top: 40px;
-  }
   .pt-\[52px\] {
     padding-top: 52px;
-  }
-  .pb-\[52px\] {
-    padding-bottom: 52px;
   }
   .pb-\[60px\] {
     padding-bottom: 60px;
@@ -719,14 +585,8 @@
   .text-center {
     text-align: center;
   }
-  .text-end {
-    text-align: end;
-  }
   .text-justify {
     text-align: justify;
-  }
-  .text-start {
-    text-align: start;
   }
   .font-comforter {
     font-family: var(--font-comforter);
@@ -736,9 +596,6 @@
   }
   .font-unlock {
     font-family: var(--font-unlock);
-  }
-  .text-\[1px\] {
-    font-size: 1px;
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -761,20 +618,11 @@
   .text-\[25px\] {
     font-size: 25px;
   }
-  .text-\[30px\] {
-    font-size: 30px;
-  }
   .text-\[33px\] {
     font-size: 33px;
   }
-  .text-\[48px\] {
-    font-size: 48px;
-  }
   .text-\[50px\] {
     font-size: 50px;
-  }
-  .text-\[60px\] {
-    font-size: 60px;
   }
   .text-\[64px\] {
     font-size: 64px;
@@ -790,9 +638,6 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
-  }
-  .text-\[1\] {
-    color: 1;
   }
   .text-black {
     color: var(--color-black);
@@ -842,21 +687,485 @@
       }
     }
   }
-  .focus\:outline {
-    &:focus {
-      outline-style: var(--tw-outline-style);
-      outline-width: 1px;
-    }
-  }
   .focus\:outline-none {
     &:focus {
       --tw-outline-style: none;
       outline-style: none;
     }
   }
+  .md\:top-\[50px\] {
+    @media (width >= 48rem) {
+      top: 50px;
+    }
+  }
+  .md\:top-\[380px\] {
+    @media (width >= 48rem) {
+      top: 380px;
+    }
+  }
+  .md\:right-\[40px\] {
+    @media (width >= 48rem) {
+      right: 40px;
+    }
+  }
+  .md\:left-\[40px\] {
+    @media (width >= 48rem) {
+      left: 40px;
+    }
+  }
+  .md\:mx-\[40px\] {
+    @media (width >= 48rem) {
+      margin-inline: 40px;
+    }
+  }
+  .md\:grid {
+    @media (width >= 48rem) {
+      display: grid;
+    }
+  }
+  .md\:h-\[330px\] {
+    @media (width >= 48rem) {
+      height: 330px;
+    }
+  }
+  .md\:h-\[477px\] {
+    @media (width >= 48rem) {
+      height: 477px;
+    }
+  }
+  .md\:h-\[577px\] {
+    @media (width >= 48rem) {
+      height: 577px;
+    }
+  }
+  .md\:h-\[770px\] {
+    @media (width >= 48rem) {
+      height: 770px;
+    }
+  }
+  .md\:h-\[830px\] {
+    @media (width >= 48rem) {
+      height: 830px;
+    }
+  }
+  .md\:h-\[860px\] {
+    @media (width >= 48rem) {
+      height: 860px;
+    }
+  }
+  .md\:h-\[880px\] {
+    @media (width >= 48rem) {
+      height: 880px;
+    }
+  }
+  .md\:h-\[890px\] {
+    @media (width >= 48rem) {
+      height: 890px;
+    }
+  }
+  .md\:w-\[1\] {
+    @media (width >= 48rem) {
+      width: 1;
+    }
+  }
+  .md\:w-\[10px\] {
+    @media (width >= 48rem) {
+      width: 10px;
+    }
+  }
+  .md\:w-\[90px\] {
+    @media (width >= 48rem) {
+      width: 90px;
+    }
+  }
+  .md\:w-\[140px\] {
+    @media (width >= 48rem) {
+      width: 140px;
+    }
+  }
+  .md\:w-\[150px\] {
+    @media (width >= 48rem) {
+      width: 150px;
+    }
+  }
+  .md\:w-\[170px\] {
+    @media (width >= 48rem) {
+      width: 170px;
+    }
+  }
+  .md\:w-\[270px\] {
+    @media (width >= 48rem) {
+      width: 270px;
+    }
+  }
+  .md\:w-\[460px\] {
+    @media (width >= 48rem) {
+      width: 460px;
+    }
+  }
+  .md\:w-\[1000px\] {
+    @media (width >= 48rem) {
+      width: 1000px;
+    }
+  }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:justify-between {
+    @media (width >= 48rem) {
+      justify-content: space-between;
+    }
+  }
+  .md\:gap-6 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:gap-\[0px\] {
+    @media (width >= 48rem) {
+      gap: 0px;
+    }
+  }
+  .md\:gap-\[10px\] {
+    @media (width >= 48rem) {
+      gap: 10px;
+    }
+  }
+  .md\:gap-\[20px\] {
+    @media (width >= 48rem) {
+      gap: 20px;
+    }
+  }
+  .md\:gap-\[21px\] {
+    @media (width >= 48rem) {
+      gap: 21px;
+    }
+  }
+  .md\:gap-\[29px\] {
+    @media (width >= 48rem) {
+      gap: 29px;
+    }
+  }
+  .md\:gap-\[40px\] {
+    @media (width >= 48rem) {
+      gap: 40px;
+    }
+  }
+  .md\:gap-\[50px\] {
+    @media (width >= 48rem) {
+      gap: 50px;
+    }
+  }
+  .md\:gap-\[70px\] {
+    @media (width >= 48rem) {
+      gap: 70px;
+    }
+  }
+  .md\:gap-\[80px\] {
+    @media (width >= 48rem) {
+      gap: 80px;
+    }
+  }
+  .md\:gap-\[100px\] {
+    @media (width >= 48rem) {
+      gap: 100px;
+    }
+  }
+  .md\:gap-\[px\] {
+    @media (width >= 48rem) {
+      gap: px;
+    }
+  }
+  .md\:px-\[30px\] {
+    @media (width >= 48rem) {
+      padding-inline: 30px;
+    }
+  }
+  .md\:px-\[43px\] {
+    @media (width >= 48rem) {
+      padding-inline: 43px;
+    }
+  }
+  .md\:px-\[53px\] {
+    @media (width >= 48rem) {
+      padding-inline: 53px;
+    }
+  }
+  .md\:px-\[64px\] {
+    @media (width >= 48rem) {
+      padding-inline: 64px;
+    }
+  }
+  .md\:py-\[32px\] {
+    @media (width >= 48rem) {
+      padding-block: 32px;
+    }
+  }
+  .md\:py-\[33px\] {
+    @media (width >= 48rem) {
+      padding-block: 33px;
+    }
+  }
+  .md\:py-\[42px\] {
+    @media (width >= 48rem) {
+      padding-block: 42px;
+    }
+  }
+  .md\:pt-\[20px\] {
+    @media (width >= 48rem) {
+      padding-top: 20px;
+    }
+  }
+  .md\:text-\[14px\] {
+    @media (width >= 48rem) {
+      font-size: 14px;
+    }
+  }
+  .md\:text-\[16px\] {
+    @media (width >= 48rem) {
+      font-size: 16px;
+    }
+  }
+  .md\:text-\[18px\] {
+    @media (width >= 48rem) {
+      font-size: 18px;
+    }
+  }
+  .md\:text-\[28px\] {
+    @media (width >= 48rem) {
+      font-size: 28px;
+    }
+  }
+  .md\:text-\[40px\] {
+    @media (width >= 48rem) {
+      font-size: 40px;
+    }
+  }
+  .md\:text-\[50px\] {
+    @media (width >= 48rem) {
+      font-size: 50px;
+    }
+  }
+  .lg\:top-\[130px\] {
+    @media (width >= 64rem) {
+      top: 130px;
+    }
+  }
+  .lg\:top-\[520px\] {
+    @media (width >= 64rem) {
+      top: 520px;
+    }
+  }
+  .lg\:right-\[80px\] {
+    @media (width >= 64rem) {
+      right: 80px;
+    }
+  }
+  .lg\:left-\[80px\] {
+    @media (width >= 64rem) {
+      left: 80px;
+    }
+  }
+  .lg\:mx-\[0px\] {
+    @media (width >= 64rem) {
+      margin-inline: 0px;
+    }
+  }
+  .lg\:mx-\[80px\] {
+    @media (width >= 64rem) {
+      margin-inline: 80px;
+    }
+  }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
+    }
+  }
+  .lg\:h-\[377px\] {
+    @media (width >= 64rem) {
+      height: 377px;
+    }
+  }
+  .lg\:h-\[413px\] {
+    @media (width >= 64rem) {
+      height: 413px;
+    }
+  }
+  .lg\:h-\[800px\] {
+    @media (width >= 64rem) {
+      height: 800px;
+    }
+  }
+  .lg\:h-\[830px\] {
+    @media (width >= 64rem) {
+      height: 830px;
+    }
+  }
+  .lg\:w-\[105px\] {
+    @media (width >= 64rem) {
+      width: 105px;
+    }
+  }
+  .lg\:w-\[160px\] {
+    @media (width >= 64rem) {
+      width: 160px;
+    }
+  }
+  .lg\:w-\[320px\] {
+    @media (width >= 64rem) {
+      width: 320px;
+    }
+  }
+  .lg\:w-\[350px\] {
+    @media (width >= 64rem) {
+      width: 350px;
+    }
+  }
+  .lg\:w-\[530px\] {
+    @media (width >= 64rem) {
+      width: 530px;
+    }
+  }
   .lg\:w-\[1349px\] {
     @media (width >= 64rem) {
       width: 1349px;
+    }
+  }
+  .lg\:grid-cols-1 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-4 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-rows-1 {
+    @media (width >= 64rem) {
+      grid-template-rows: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
+    }
+  }
+  .lg\:gap-0 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:gap-11 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 11);
+    }
+  }
+  .lg\:gap-\[0px\] {
+    @media (width >= 64rem) {
+      gap: 0px;
+    }
+  }
+  .lg\:gap-\[15px\] {
+    @media (width >= 64rem) {
+      gap: 15px;
+    }
+  }
+  .lg\:gap-\[16px\] {
+    @media (width >= 64rem) {
+      gap: 16px;
+    }
+  }
+  .lg\:gap-\[20ppx\] {
+    @media (width >= 64rem) {
+      gap: 20ppx;
+    }
+  }
+  .lg\:gap-\[30px\] {
+    @media (width >= 64rem) {
+      gap: 30px;
+    }
+  }
+  .lg\:gap-\[45px\] {
+    @media (width >= 64rem) {
+      gap: 45px;
+    }
+  }
+  .lg\:gap-\[100px\] {
+    @media (width >= 64rem) {
+      gap: 100px;
+    }
+  }
+  .lg\:gap-\[150px\] {
+    @media (width >= 64rem) {
+      gap: 150px;
+    }
+  }
+  .lg\:gap-\[px\] {
+    @media (width >= 64rem) {
+      gap: px;
+    }
+  }
+  .lg\:px-\[50px\] {
+    @media (width >= 64rem) {
+      padding-inline: 50px;
+    }
+  }
+  .lg\:px-\[53px\] {
+    @media (width >= 64rem) {
+      padding-inline: 53px;
+    }
+  }
+  .lg\:px-\[64px\] {
+    @media (width >= 64rem) {
+      padding-inline: 64px;
+    }
+  }
+  .lg\:py-\[42px\] {
+    @media (width >= 64rem) {
+      padding-block: 42px;
+    }
+  }
+  .lg\:py-\[53px\] {
+    @media (width >= 64rem) {
+      padding-block: 53px;
+    }
+  }
+  .lg\:pt-\[40px\] {
+    @media (width >= 64rem) {
+      padding-top: 40px;
+    }
+  }
+  .lg\:text-\[16px\] {
+    @media (width >= 64rem) {
+      font-size: 16px;
+    }
+  }
+  .lg\:text-\[20px\] {
+    @media (width >= 64rem) {
+      font-size: 20px;
+    }
+  }
+  .lg\:text-\[48px\] {
+    @media (width >= 64rem) {
+      font-size: 48px;
+    }
+  }
+  .lg\:text-\[50px\] {
+    @media (width >= 64rem) {
+      font-size: 50px;
+    }
+  }
+  .lg\:text-\[60px\] {
+    @media (width >= 64rem) {
+      font-size: 60px;
     }
   }
   .\[\&\:\:-webkit-inner-spin-button\]\:appearance-none {
