--- a/src/css/output.css
+++ b/src/css/output.css
@@ -697,6 +697,9 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
+  .p-9 {
+    padding: calc(var(--spacing) * 9);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
